--- a/hr_and_asset_mgt/src/style/myRequests.css
+++ b/hr_and_asset_mgt/src/style/myRequests.css
@@ -128,6 +128,7 @@
 .request-info {
   display: grid;
   gap: 4px;
+  flex: 1;
 }
 
 .request-name {
@@ -163,6 +164,7 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  margin-left: auto;
 }
 
 /* Button size & shape */
