attendance section updated with icons

--- a/hr_and_asset_mgt/src/style/myRequests.css
+++ b/hr_and_asset_mgt/src/style/myRequests.css
@@ -114,7 +114,7 @@
 
 /* Request Item */
 .request-item {
-  display: flex;
+  display: flex !important; 
   align-items: center;
   justify-content: space-between;
   gap: 16px;
@@ -164,6 +164,7 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  flex-shrink: 0;     /* prevents wrapping */
   margin-left: auto;
 }
 
@@ -197,14 +198,5 @@
   background-color: #b91c1c;
 }
 
-/* @media (max-width: 768px) {
-  .request-item {
-    flex-direction: column;
-    align-items: flex-start;
-  }
 
-  .request-actions {
-    width: 100%;
-  }
-} */
 
